# ChangeLog for sci-biology/afni
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep

  04 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep and removed keyword for live ebuild

*afni-9999 (04 Mar 2015)

  04 Mar 2015;  <chymera@gentoo.org> +afni-9999.ebuild, +metadata.xml:
  Added live ebuild and metadata