@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
+  added path to environment variable, corrected spelling and whitespace
+
   05 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
   added dep
 
